<resources>
    <string name="home_setting">设置</string>
    <string name="home_account">切换账号</string>
    <string name="home_tv_repair">检修工作</string>
    <string name="home_tv_energy">能量隔离</string>
    <string name="home_tv_greasing">润油管理</string>
    <string name="home_tv_increment">专项工作</string>
    <string name="home_tv_fault">故障上报</string>
    <string name="home_tv_sos">SOS</string>
    <string name="str_request_error">请求出错</string>

    <string name="toast_exit_app">再次点击将退出应用</string>

    <string name="str_first_nav_1">工作</string>
    <string name="str_first_nav_2">台账</string>
    <string name="str_first_nav_3">任务</string>
    <string name="str_first_nav_4">故障</string>
    <string name="str_first_nav_5">数据</string>

    <string name="no_data">没有您找的数据</string>
    <string name="energy_point">请根据操作规范隔离能量\n系统将记录您本次操作</string>
    <string name="mine_about_content">&#160;&#160;&#160;&#160;&#160;&#160;西安小梭易智信息科技有限公司是一家专门为生产制造企业设备管理组织及人员提供高性价比的数字化、信息化、智能化、共享化服务及应用的创新型企业。
        \n&#160;&#160;&#160;&#160;&#160;&#160;公司由多年从事设备管理、市场业务及系统研发人员合作创立，致力于为用户提供有用、易用、乐用的设备管理相关应用及服务，帮助提高设备运维管理能力及效率，并为设备全生命周期健康管理提供可靠的数据支持及分析能力。
        \n&#160;&#160;&#160;&#160;&#160;&#160;公司还将打通企业间的设备及管理链接，实现更进一步的的大数据化设备运维管理体系，为用户带来更多更好的效益。</string>
    <string name="mine_about_content_1">&#160;&#160;&#160;&#160;&#160;&#160;西安中微安控新材料科技有限公司位于西安市高新区，是拥有独立知识产权的消防产品生产商，是专业从事微空间智能灭火系统产品研发、制造的服务商。
    \n&#160;&#160;&#160;&#160;&#160;&#160;公司拥有一批高质量的专业技术人员，并依托中科院过程所、南京理工大学、南京工业大学、南京师范大学等科研院所共同建立研发团队，致力于以安全技术防护为主，安防、消防为辅，解决各行业微空间设备的火灾防护问题。 公司主营产品：智能灭火材料 智能灭火材料是消防行业的一个创新性发明。
    \n&#160;&#160;&#160;&#160;&#160;&#160;自公司成立以来，我们坚持“以科技创新来解决核心消防材料”为宗旨，秉承“灭早、灭小、灭源头“的品牌特质，致力为所有微空间设备全新构造一道安全可靠的防火墙</string>
    <string name="mine_content">&#160;&#160;&#160;&#160;&#160;&#160;您若有想法、建议或新的功能需求，欢迎联系我们</string>
    <string name="mine_tel_1">&#160;&#160;&#160;&#160;&#160;&#160;服务微信：isuotech</string>
    <string name="mine_tel_2">&#160;&#160;&#160;&#160;&#160;&#160;服务QQ：1513874</string>
    <string name="mine_tel_3">&#160;&#160;&#160;&#160;&#160;&#160;企业官网：http://www.isuo.tech</string>
    <string name="mine_tel_4">&#160;&#160;&#160;&#160;&#160;&#160;企业官网：http://www.xkjznmh.com</string>
    <string name="mine_tel">&#160;&#160;&#160;&#160;&#160;&#160;服务热线：</string>

    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">594a2e41</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>

    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>

    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="str_login_btn">登录</string>
    <string name="str_register_btn">注册</string>
    <string name="hit_login_user">输入账号</string>
    <string name="hit_login_pass">输入密码</string>
    <string name="tab_await">待办任务</string>
    <string name="tab_inspection">巡检任务</string>
    <string name="tab_overhaul">检修任务</string>
    <string name="tab_increment">专项工作</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_sunday">周日</string>
    <string name="text_monday">周一</string>
    <string name="text_tuesday">周二</string>
    <string name="text_wednesday">周三</string>
    <string name="text_thursday">周四</string>
    <string name="text_friday">周五</string>
    <string name="text_saturday">周六</string>

    <string name="title_equipment_1">故障记录</string>
    <string name="title_equipment_2">检修记录</string>
    <string name="title_equipment_3">巡检数据</string>
    <string name="title_alarm_detail_1">指派</string>
    <string name="title_alarm_detail_2">关闭</string>
    <string name="title_alarm_detail_3">转检修</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="no_more_free_disk">磁盘空间不足</string>
    <string name="download_prompt">下载进度</string>
    <string name="update_new_version">版本更新</string>
    <string name="need_save_setting">当前App需要申请存储权限,需要打开设置页面么?</string>
    <string name="need_camera_setting">当前App需要申请拍照权限,需要打开设置页面么?</string>
    <string name="need_voice_setting">当前App需要申请录音权限,需要打开设置页面么?</string>
    <string name="need_save_state_setting">当前App需要申请存储权限和获取手机状态,需要打开设置页面么?</string>
    <string name="request_permissions">权限申请</string>
    <string name="sure">确认</string>

    <string name="str_choose_carmer">拍照</string>
    <string name="str_choose_photo">相册</string>

    <string name="str_all_count">总数</string>
    <string name="str_pending_count">待处理</string>
    <string name="str_flowing_count">处理中</string>
    <string name="str_repair_count">转检修</string>
    <string name="str_close_count">已关闭</string>
    <string name="str_a_count">A类</string>
    <string name="str_b_count">B类</string>
    <string name="str_c_count">C类</string>

    <string name="str_upload">重新上传</string>
    <string name="str_delete">删除照片</string>
    <string name="str_take_photo">重新拍照</string>

    <string name="new_me">"与我相关"</string>
    <string name="new_alarm">故障消息</string>
    <string name="new_work">工作动态</string>
    <string name="new_notify">企业通知</string>
    <string name="please_waite">马上重启，请稍等</string>
    <string name="zero_time">00:00:00</string>

    <string name="room_type_1">电力配电室</string>
    <string name="room_type_2">电机区域</string>

    <string name="toolbar_title_create_equip">台账录入</string>
    <string name="toolbar_title_equip_info">设备信息</string>

    <string name="chat_10kv">10kV</string>
    <string name="chat_35kv">35kV</string>
    <string name="chat_110kv">110kV</string>
    <string name="chat_220kv">220kV</string>
    <string name="chat_330kv">330kV</string>
    <string name="chat_jin">#</string>
    <string name="chat_1">Ⅰ</string>
    <string name="chat_2">Ⅱ</string>
    <string name="chat_3">Ⅲ</string>
    <string name="chat_4">Ⅳ</string>
    <string name="chat_5">Ⅴ</string>
    <string name="chat_6">Ⅵ</string>
    <string name="pro_special_table">特殊字符表</string>

    <string name="title_tab_start_date">开始时间</string>
    <string name="ttile_tab_end_date">结束时间</string>
    <string name="no_data_now">暂时没有数据</string>
    <string name="equipment_count">设备数量</string>
    <string name="start_task">开始任务</string>
</resources>
