<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="登陆"
                    android:textColor="@color/text333"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="44dp"
                    android:background="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/splash_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/text333"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_btn_margin_left_right"
                    android:layout_marginTop="38dp"
                    android:layout_marginRight="@dimen/login_btn_margin_left_right"
                    android:background="@drawable/bg_login_enter"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="账号"
                            android:textColor="@color/text333"
                            android:textSize="16sp" />

                        <android.support.v7.widget.AppCompatMultiAutoCompleteTextView
                            android:id="@+id/edit_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/login_enter_bg"
                            android:freezesText="true"
                            android:hint="@string/hit_login_user"
                            android:inputType="textPersonName"
                            android:lines="1"
                            android:maxLength="16"
                            android:paddingLeft="20dp"
                            android:textColor="@color/login_name_et"
                            android:textColorHint="@color/login_name_et_hit"
                            android:textSize="@dimen/login_enter_tv_size" />
                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/login_name_pass_device" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="密码"
                            android:textColor="@color/text333"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/login_enter_bg"
                            android:hint="@string/hit_login_pass"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLength="16"
                            android:paddingLeft="20dp"
                            android:textColor="@color/login_pass_et"
                            android:textColorHint="@color/login_pass_et_hit"
                            android:textSize="@dimen/login_enter_tv_size" />
                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/login_name_pass_device" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/login_btn_margin_left_right"
                    android:text="忘记密码"
                    android:textColor="@color/gray_999999"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/login_btn_margin_left_right"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="@dimen/login_btn_margin_left_right"
                    android:background="@drawable/bg_login_btn_select"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/str_login_btn"
                    android:textColor="@color/login_btn_text"
                    android:textSize="@dimen/login_btn_text_size"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/login_btn_margin_left_right"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="@dimen/login_btn_margin_left_right"
                    android:background="@drawable/bg_login_btn_select_stroke"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/str_register_btn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/login_btn_text_size"
                    android:typeface="serif" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/system_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登录即代表你同意"
                android:textColor="#ff888888"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《平台使用协议及隐私条款》"
                android:textColor="#ff00a0ff"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/system_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_test"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="多维度即时协同设备运维管理系统"
            android:textColor="@color/gray_666666"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="Copyright@小梭易智出品"
            android:textColor="@color/gray_999999"
            android:textSize="12sp" />
    </RelativeLayout>

</FrameLayout>